--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-	"name": "vuecli3-admin",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
-	},
-	"dependencies": {
+  "name": "vuecli3-admin",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "core-js": "^2.6.5",
+    "crypto-js": "^3.1.9-1",
+    "element-ui": "^2.4.5",
     "vue": "^2.6.6",
-    "vuex": "^3.0.1",
-		"vue-router": "^3.0.1",
-		"crypto-js": "^3.1.9-1",
-		"element-ui": "^2.4.5"
-	},
-	"devDependencies": {
-		"axios": "^0.18.0",
-		"babel-plugin-component": "^1.1.1",
-		"vue-cli-plugin-axios": "^0.0.4",
-		"vue-cli-plugin-element": "^1.0.0",
-		"@vue/cli-plugin-babel": "^3.5.0",
-		"@vue/cli-plugin-eslint": "^3.5.0",
-		"@vue/cli-service": "^3.5.0",
-		"babel-eslint": "^10.0.1",
-		"eslint": "^5.8.0",
-		"eslint-plugin-vue": "^5.0.0",
-		"vue-template-compiler": "^2.5.21"
-	}
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "axios": "^0.18.0",
+    "babel-plugin-component": "^1.1.1",
+    "vue-cli-plugin-axios": "^0.0.4",
+    "vue-cli-plugin-element": "^1.0.0",
+    "@vue/cli-plugin-babel": "^3.5.0",
+    "@vue/cli-plugin-eslint": "^3.5.0",
+    "@vue/cli-service": "^3.5.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.5.21"
+  }
 }
