--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "crypto-js": "^3.1.9-1",
+    "ele-easy-table": "^1.0.6",
     "element-ui": "^2.4.5",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
