--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "crypto-js": "^3.1.9-1",
-    "ele-easy-table": "^1.0.6",
+    "ele-easy-table": "^1.0.16",
     "element-ui": "^2.4.5",
-    "vue": "^2.6.6",
-    "vue-router": "^3.0.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "axios": "^0.18.0",
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
     "babel-plugin-component": "^1.1.1",
-    "vue-cli-plugin-axios": "^0.0.4",
-    "vue-cli-plugin-element": "^1.0.0",
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-element": "^1.0.1",
+    "vue-template-compiler": "^2.6.10"
   }
 }
