--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "byte-weektime-picker": "^1.0.0",
     "core-js": "^2.6.5",
     "crypto-js": "^3.1.9-1",
     "ele-easy-table": "^1.0.16",
