--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^3.3.0",
     "dayjs": "^1.10.6",
     "element-plus": "^1.2.0-beta.3",
     "vue": "^3.2.0",
