--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "typescript": "~4.1.5",
-    "unplugin-vue-components": "^0.17.2"
+    "unplugin-auto-import": "^0.5.1",
+    "unplugin-vue-components": "^0.17.5"
   }
 }
