--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.6.5",
     "crypto-js": "^3.3.0",
     "dayjs": "^1.10.6",
-    "element-plus": "^1.2.0-beta.3",
+    "element-plus": "^2.1.4",
     "vue": "^3.2.0",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
