🎉 init: pinia init

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^3.3.0",
     "dayjs": "^1.10.6",
     "element-plus": "^2.1.4",
+    "pinia": "^2.0.12",
     "vue": "^3.2.0",
     "vue-router": "^4.0.10",
     "vuex": "^4.0.2"
